MitoMiner 4 intermine/webapp alterations

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -644,6 +644,7 @@ contact.email = Your email address:
 contact.subject = Subject:
 contact.message = Message:
 contact.submit = Send Feedback
+contact.ouremail = Write to us at mitominer@mrc-mbu.cam.ac.uk or use the form below:
 
 # LOGIN
 login.title = Login page
