--- a/mitominer4/webapp/resources/web.properties
+++ b/mitominer4/webapp/resources/web.properties
@@ -201,9 +201,16 @@ webapp.linkRedirect=org.intermine.bio.web.BioLinkRedirectManager
 # links to intermine report pages will be replaced with these URLs
 #externallink.ratRedirect.Gene.10116.primaryIdentifier.url=http://www.intermine.org/rgd/portal.do?externalids=<<attributeValue>>&class=Gene&origin=FlyMine
 
+# Link to WashU
+#externallink.[uniqueID].[class].[taxonId].[field].url = [full URL]
+externallink.identifier.MitochondrialDiseases.*.WashUlinkResults.url=<<attributeValue>>
+
 # type specific examples
 bag.example.identifiers.gene=Atp5a1, Atp5b, Atp5d, Atp5c1
 bag.example.identifiers.protein=Q03265, P56480, Q9D3D9, Q91VR2
+
+project.citation=<a href="https://www.ncbi.nlm.nih.gov/pubmed/26432830" target="_blank">Smith AC and Robinson AJ. MitoMiner v3.1, an update on the mitochondrial proteomics database. Nucleic Acids Res. 2016 Jan 4;44(D1):D1258-61.</a>
+
 
 # Genomic Region Search
 genomicRegionSearch.display = false
