--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -678,7 +678,7 @@ login.openid = using OpenID
 createAccount.title = Create Account
 createAccount.description = Create a new user account
 createAccount.username = Username (email address):
-createAccount.privacy = NOTE - any information saved in your account is private.  It will not be accessible by other users and we will not inspect your saved data beyond automatic performance optimisation and updates.
+createAccount.privacy = NOTE - an account is not required to use MitoMiner and is provided for only for convenience. Any information saved in your account is private. It will not be accessible by other users and we will not inspect your saved data. The only personal data we hold on creation of the account is your email address and MitoMiner password. If you wish for your account to be deleted please contact us at mitominer@mrc-mbu.cam.ac.uk 
 createAccount.password = Choose a password:
 createAccount.password2 = Please retype your password:
 createAccount.createAccount = Create Account
