--- a/mitominer4/webapp/resources/web.properties
+++ b/mitominer4/webapp/resources/web.properties
@@ -98,13 +98,13 @@ attributelink.arrayexpress.Gene.*.primaryIdentifier.imageName=array-express-atla
 
 
 # Header - these will populate the top right navigation
-header.links=about,help,FAQ,cite,cookie-policy
+header.links=about,help,FAQ,cite,cookie-policy,privacy-policy
 header.links.about=http://mitominer.mrc-mbu.cam.ac.uk/support/about
 header.links.cite=http://mitominer.mrc-mbu.cam.ac.uk/support/cite
 header.links.help=http://mitominer.mrc-mbu.cam.ac.uk/support/tutorials
 header.links.FAQ=http://mitominer.mrc-mbu.cam.ac.uk/support/faq
 header.links.cookie-policy=http://mitominer.mrc-mbu.cam.ac.uk/support/cookies-policy
-
+header.links.privacy-policy=https://www.information-compliance.admin.cam.ac.uk/data-protection/general-data
 
 
 # examples for the quicksearch
